--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,6 @@ p {
 
 h1,h2 {
     font-family: Oswald, sans-serif;
-    text-transform: uppercase;
     letter-spacing: 4px;
     color: #383535;
 }
@@ -93,10 +92,89 @@ menu li {
     height: auto;
 }
 
+
+/* page heros */
 .welcome {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     font-size: 800%;
+    vertical-align: -webkit-baseline-middle;
+    text-align: center;
+    position: relative;
+    top: 40%;
+    color: #fafafa;
 }
+
+.hero-image 
+{
+height: 800px;
+display: block;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+}
+
+.cyclists-home
+{
+    background-image: url("../images/group-of-cyclists.jpg");
+    }
+
+.coffee-cafe {
+    background-image: url(../images/coffee-roast.jpg);
+}
+
+.contact-page {
+    background-image: url('../images/open-road.jpeg');
+}
+
+.event-calender {
+    background-image: url(../images/legs-profile-cyclist.jpg);
+}
+
+/* Footer section */
+
+footer {
+    clear: both;
+    height: 100px;
+}
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */ 
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  }
+  
+  /* Style the submit button with a specific background color etc */
+  input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  /* When moving the mouse over the submit button, add a darker green color */
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+  /* Add a background color and some padding around the form */
+  .container {
+    border-radius: 5px;
+    background-color: #fafafa;
+    padding: 80px;
+    max-width: 1170px;
+    margin: auto;
+    
+  }
+
+  .twocol {
+    width: 50%;
+    display: inline-block;
+    padding: 80px;
+  }
