--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,7 +170,7 @@ input[type=text], select, textarea {
     padding: 80px;
     max-width: 1170px;
     margin: auto;
-    
+    git add 
   }
 
   .twocol {
