added footer styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,3 +178,32 @@ input[type=text], select, textarea {
     display: inline-block;
     padding: 80px;
   }
+
+  #footer a {
+        height: 56px;
+        width: 56px;
+        display: inline-block;
+        margin: 10px;
+        
+  }
+
+  #footer a:hover {
+    transition: all 0.3s ease-out;
+    -webkit-transition: all 0.3s ease-out;
+  }
+
+
+  #footer .facebook:hover {
+    background-position: 0 -56px;
+  }
+  #footer .twitter:hover {
+    background-position: -233px -56px;
+  }
+  #footer .youtube:hover {
+    background-position: -156px -56px;
+  }
+  #footer .instagram:hover {
+    background-position: -78px -56px;
+  }
+
+ 
