--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,8 @@ menu li {
     font-size: 20px;
     padding-bottom: 1%;
     letter-spacing: 1px;
+    margin-right: 15px;
+    margin-left: 15px;
 }
 /* page heros */
 .welcome {
