--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,8 +127,10 @@ menu li {
 }
 
 .row {
-    margin-right: -15px;
-    margin-left: -15px;
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 /* event page */
