--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,12 @@
     height: 65px;
 }
 
+.overlay {
+    background: rgba(50, 70, 80, 0.7);
+    overflow: hidden;
+    height: 100%;
+   }
+
 nav {
     display: inline-block;
     vertical-align: -webkit-baseline-middle;
@@ -41,7 +47,7 @@ nav {
 body {
     font-family: Lato, sans-serif;
     font-weight: 300;
-    color: #000
+    color: #000;
 }
 
 a {
@@ -145,6 +151,7 @@ menu li {
     margin-left: 15px;
 }
 /* page heros */
+
 .welcome {
     font-size: 800%;
     vertical-align: -webkit-baseline-middle;
@@ -154,8 +161,7 @@ menu li {
     color: #fafafa;
 }
 
-.hero-image 
-{
+.hero-image {
 height: 800px;
 display: block;
 background-position: center;
@@ -169,6 +175,20 @@ background-size: cover;
     background-repeat: no-repeat;
     background-position: right;
     border-radius: 10px;
+}
+
+/* column styling */
+
+.column {
+    padding: 10px;
+    width: 50%;
+    float: left;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 .cyclists-home
@@ -200,6 +220,8 @@ background-size: cover;
     text-align: center;
 }
 
+
+
 #social-text {
     padding-bottom: 30px;
 }
@@ -222,64 +244,56 @@ input[type=text], select, textarea {
     margin-top: 6px;
     margin-bottom: 16px; 
     resize: vertical;
-  }
+}
 
   /* submit button style*/
 
-  input[type=submit] {
+input[type=submit] {
     background-color: #04AA6D;
     color: white;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-  }
+}
   
   /* Hover over submit button style */
 
   input[type=submit]:hover {
     background-color: #3f3f3f;
-  }
+}
   
+  /* Social media */
 
-  .container {
-    border-radius: 5px;
-    background-color: #ffffff;
-    padding: 80px;
-    max-width: 1170px;
-    margin: auto;
+.content-wrap {
+    padding-bottom: 2.5rem; 
   }
 
-  .twocol {
-    width: 50%;
+
+/* footer */
+
+footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: r.5rem;
     display: inline-block;
-    padding: 80px;
-  }
+    margin: auto;
+    text-align: center;
+}
 
-  #footer a {
-        height: 20px;
-        width: 20px;
-        display: inline-block;
-        margin: 20px;
-  }
+footer a{
+    padding: 24px;
+    color: magenta;
+}
 
-  #footer a:hover {
-    transition: all 0.3s ease-out;
-    -webkit-transition: all 0.3s ease-out;
-  }
+footer a:hover {
+transition: all 0.3s ease-out;
+-webkit-transition: all 0.3s ease-out;
+color: rgb(255, 247, 0);
+}
 
 
-  #footer .facebook:hover {
-    background-position: 0 -56px;
-  }
-  #footer .twitter:hover {
-    background-position: -233px -56px;
-  }
-  #footer .youtube:hover {
-    background-position: -156px -56px;
-  }
-  #footer .instagram:hover {
-    background-position: -78px -56px;
-  }
+
 
  
