--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,14 +60,15 @@ p {
     font-size: 1.2em;
     font-weight: bold;
     margin-bottom: 16px;
+    padding: 0px 10px 10px 10px;
 }
 
 h1,h2 {
     font-family: Oswald, sans-serif;
     letter-spacing: 4px;
     color: #383535;
+    padding: 0px 10px 10px 10px;
 }
-
 
 /* navigation links */
 
@@ -143,6 +144,12 @@ menu li {
 
 .latte {
     width: 200px;
+    height: 200px;
+    border-radius: 5%;
+}
+
+.group-cycling {
+    width: 400px;
     height: 200px;
     border-radius: 5%;
 }
@@ -253,7 +260,7 @@ footer {
     bottom: 0;
     width: 100%;
     display: inline-block;
-    height: r.5rem;
+    height: 1.5em;
     margin: auto;
 }
 
