changed photo in contact page and paragraphs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,7 +235,7 @@ background-size: cover;
 }
 
 .contact-page {
-    background-image: url('../images/open-road.jpeg');
+    background-image: url('../images/cyclists-uphill.jpg');
 }
 
 .event-calender {
