--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,19 +111,6 @@ menu li {
     line-height: 75px;
 }
 
-/* group of cyclists image */
-
-.group-of-cyclists {
-    position: relative;
-    text-align: center;
-    color: #000000;
-}
-
-#group-of-cyclists2 img {
-    width: 100%;
-    height: auto;
-}
-
 /* Cafe page */
 
 .row {
@@ -166,16 +153,32 @@ menu li {
     margin-bottom: 20px;
 }
 
+/* coffee pictures */
+
 .latte {
-    width: 200px;
-    height: 200px;
-    border-radius: 5%;
+    width: 300px;
+    height: 300px;
+    border-radius: 2%;
 }
 
-.group-cycling {
-    width: 400px;
-    height: 200px;
-    border-radius: 5%;
+.espresso {
+    width: 300px;
+    height: 300px;
+    border-radius: 2%;
+}
+
+/* cycling images */
+
+.female {
+    width: 300px;
+    height: 400px;
+    border-radius: 1%;
+}
+
+.backwheel {
+    width: 300px;
+    height: 400px;
+    border-radius: 2%;
 }
 
 /* event page */
@@ -189,6 +192,7 @@ menu li {
     margin-right: 15px;
     margin-left: 15px;
 }
+
 /* page heros */
 
 .welcome {
