--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,7 +323,7 @@ footer a:hover {
 
 /* For larger screens, medium size from 950px and down*/
 
-@media screen and (max-width: 950px) {
+@media screen and (min-width: 800px) {
 
         .menu {
             clear: left;
@@ -339,7 +339,6 @@ footer a:hover {
         }
 
         .column {
-            width: 60%;
             float: left;
             line-height: 20px;
             clear: both;
@@ -351,8 +350,19 @@ footer a:hover {
         }
 
         .container {
-            width: 90%;
             height: 1200px;
             margin: auto;
         }
+}
+
+/* For mobile screens */
+@media screen and (max-width: 480px) {
+
+   .column {
+        width: 100%;
+   }
+
+   .row{
+    display: block;
+   }
 }
