--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 
 /* heading */
 
-.header {
+header {
     background-color: #000000;
     width: 100%;
     top: 0px;
@@ -372,7 +372,11 @@ footer a:hover {
     font-size: 48px;
    }
 
-.header li a {
+header li a {
     padding: 20px 30px;
+}
+
+header {
+    text-align: left;
 }
 }
