changed contact info to email

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,7 +219,7 @@ background-size: cover;
 }
 
 .cyclists-home {
-    background-image: url("../images/cyclists-rapha.jpg");
+    background-image: url("../images/cyclists-rapha3.jpg");
     }
 
 .latte-art {
