--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ nav {
 
 nav a {
     text-decoration: none;
-    margin-left: 24px;
+    margin-left: 18px;
     color: #fafafa;
     text-transform: uppercase;
 }
@@ -56,7 +56,7 @@ nav a:hover {
     padding-left: 10px;
     margin-left: 30px;
     position: relative;
-    top: 20px;
+    top: 12px;
     width: 128px;
 }
 
@@ -396,5 +396,9 @@ footer a:hover {
         width: 128px;
         margin-bottom: 8px;
         float: none;
+    }
+
+    .hero-image {
+        height: 80vh;
     }
 }
